# pitch_builder

./: README.md  pyproject.toml
src/pitch_builder/: crew.py  main.py  report.md  streamlit_app.py
src/pitch_builder/config/: agents.yaml  tasks.yaml
