[project]
name = "pitch_builder"
version = "0.1.0"
description = "pitch-builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
pitch_builder = "pitch_builder.main:run"
run_crew = "pitch_builder.main:run"
train = "pitch_builder.main:train"
replay = "pitch_builder.main:replay"
test = "pitch_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
